edited productServiceTest file for category relationship